--- a/client-myjss/src/app/modules/general/components/contact/contact.component.html
+++ b/client-myjss/src/app/modules/general/components/contact/contact.component.html
@@ -38,7 +38,7 @@
         <ul class="list-unstyled mb-0">
           <li class="pb-1 mb-2">
             <span class="d-block fs-sm text-body-secondary mb-1">Standard</span>
-            <p>01.47.03.10.10</p>
+            <p class="fs-lg">01 47 03 10 10</p>
           </li>
         </ul>
       </div>
@@ -49,7 +49,7 @@
           <li class="pb-1 mb-2">
             <span class="d-block fs-sm text-body-secondary mb-1">lun - ven</span>
             <div class="d-flex align-items-center">
-              <span class="fs-lg fw-medium text-body-secondary">9h00</span>
+              <span class="fs-lg fw-medium text-body-secondary" style="padding-right: 7px;">9h00</span>
               <span class="border-top mx-4" style="width: 36px; height: 1px;"></span>
               <span class="fs-lg fw-medium text-body-secondary">12h30</span>
             </div>
@@ -64,7 +64,7 @@
 
       <div class="col pb-2">
         <h4 class="mb-lg-4">Email</h4>
-        <p>{{emailJss}}</p>
+        <p class="fs-lg">{{emailJss}}</p>
       </div>
     </div>
   </div>
@@ -83,7 +83,7 @@
         <h4 class="mb-lg-4">Parking</h4>
         <ul class="list-unstyled mb-0">
           <li class="pb-1 mb-2">
-            <p>Garage à proximité</p>
+            <p class="fs-lg">Garage à proximité</p>
           </li>
         </ul>
       </div>
