--- a/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.html
+++ b/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.html
@@ -69,11 +69,11 @@
         </aside>
 
         <div class="col-8">
-          <h1 class="mb-5">Politique de protection des données personnelles</h1>
+          <h1 class="mb-5">Politique de confidentialité</h1>
           <h3>1. Introduction à la Gestion des Données Personnelles</h3>
           <p>
             Nous prenons très au sérieux la protection de vos données personnelles et nous nous engageons à respecter
-            toutes les réglementations en vigueur. Cette politique de protection des données personnelles vous informe
+            toutes les réglementations en vigueur. Cette politique de confidentialité vous informe
             sur
             la manière dont nous collectons, utilisons, stockons et protégeons vos informations personnelles. Elle a
             pour
@@ -266,7 +266,7 @@
           <h1 class="mb-5">Mentions légales</h1>
           <h3>1. Editeur et hébergeur</h3>
           <p>
-            SOCIETE DE PUBLICATIONS ET DE PUBLICITE POUR LES SOCIETES - SPPS 
+            SOCIETE DE PUBLICATIONS ET DE PUBLICITE POUR LES SOCIETES - SPPS
             SAS au capital de 216 000 €   552 074 627 RCS PARIS
             8 rue Saint Augustin 75002 PARIS
             Tél : 01 47 03 10 10
