--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -128,8 +128,7 @@
       <div class="row">
         <div class="col-8">
           <div class="row">
-            <p class="col-auto fs-sm mb-1 footers-footer" routerLink="/privacy-policy">Politique
-              de protection des données personnelles</p>
+            <p class="col-auto fs-sm mb-1 footers-footer" routerLink="/privacy-policy">Politique de confidentialité</p>
             <p class="col-auto fs-sm mb-1 footers-footer" routerLink="/disclaimer">Mentions
               légales</p>
             <p class="col-auto fs-sm mb-1 footers-footer" routerLink="/terms">CGU</p>
