add invoicing management kanban

--- a/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
+++ b/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
@@ -30,6 +30,11 @@
         <outbound-check-list></outbound-check-list>
       </ng-template>
     </mat-tab>
+    <mat-tab label="Gestion facturation">
+      <ng-template matTabContent>
+        <kanban-invoicing></kanban-invoicing>
+      </ng-template>
+    </mat-tab>
     <mat-tab label="Solde bancaire">
       <ng-template matTabContent>
         <bank-balance></bank-balance>
