--- a/client/src/app/modules/reporting/components/indicator/indicator.component.html
+++ b/client/src/app/modules/reporting/components/indicator/indicator.component.html
@@ -10,5 +10,10 @@
         <indicator-detailed [idIndicator]="idIndicator" [idEmployee]="idEmployee"></indicator-detailed>
       </ng-template>
     </mat-tab>
+    <mat-tab label="CRI">
+      <ng-template matTabContent>
+        <incident-reporting></incident-reporting>
+      </ng-template>
+    </mat-tab>
   </mat-tab-group>
 </div>
