--- a/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
+++ b/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
@@ -199,10 +199,10 @@
                     </div>
 
                     <!-- Prix -->
-                    <div class="mt-2 mt-sm-0 ps-sm-3 text-sm-end text-start" *ngIf="service.servicePrice">
+                    <div class="mt-2 mt-sm-0 ps-sm-3 text-sm-end text-start" *ngIf="service.serviceTotalPrice">
                       <div class="fs-sm text-body-secondary mb-1">Total</div>
                       <div class="fs-sm fw-medium text-dark">
-                        {{ service.servicePrice | currency:'EUR' }}
+                        {{ service.serviceTotalPrice | currency:'EUR' }}
                       </div>
                     </div>
 
